--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,144 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\prsal\\AppData\\Local\\Temp\\ipykernel_28568\\964754665.py:4: DtypeWarning:\n",
-      "\n",
-      "Columns (2,3,4,5,6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2075259, 9)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>Global_active_power</th>\n",
-       "      <th>Global_reactive_power</th>\n",
-       "      <th>Voltage</th>\n",
-       "      <th>Global_intensity</th>\n",
-       "      <th>Sub_metering_1</th>\n",
-       "      <th>Sub_metering_2</th>\n",
-       "      <th>Sub_metering_3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>21996</th>\n",
-       "      <td>1/1/2007</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>2.580</td>\n",
-       "      <td>0.136</td>\n",
-       "      <td>241.970</td>\n",
-       "      <td>10.600</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21997</th>\n",
-       "      <td>1/1/2007</td>\n",
-       "      <td>00:01:00</td>\n",
-       "      <td>2.552</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>241.750</td>\n",
-       "      <td>10.400</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21998</th>\n",
-       "      <td>1/1/2007</td>\n",
-       "      <td>00:02:00</td>\n",
-       "      <td>2.550</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>241.640</td>\n",
-       "      <td>10.400</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21999</th>\n",
-       "      <td>1/1/2007</td>\n",
-       "      <td>00:03:00</td>\n",
-       "      <td>2.550</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>241.710</td>\n",
-       "      <td>10.400</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22000</th>\n",
-       "      <td>1/1/2007</td>\n",
-       "      <td>00:04:00</td>\n",
-       "      <td>2.554</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>241.980</td>\n",
-       "      <td>10.400</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Date      Time Global_active_power Global_reactive_power  Voltage  \\\n",
-       "21996  1/1/2007  00:00:00               2.580                 0.136  241.970   \n",
-       "21997  1/1/2007  00:01:00               2.552                 0.100  241.750   \n",
-       "21998  1/1/2007  00:02:00               2.550                 0.100  241.640   \n",
-       "21999  1/1/2007  00:03:00               2.550                 0.100  241.710   \n",
-       "22000  1/1/2007  00:04:00               2.554                 0.100  241.980   \n",
-       "\n",
-       "      Global_intensity Sub_metering_1 Sub_metering_2  Sub_metering_3  \n",
-       "21996           10.600          0.000          0.000             0.0  \n",
-       "21997           10.400          0.000          0.000             0.0  \n",
-       "21998           10.400          0.000          0.000             0.0  \n",
-       "21999           10.400          0.000          0.000             0.0  \n",
-       "22000           10.400          0.000          0.000             0.0  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dataset imported from kaggle at: https://www.kaggle.com/datasets/uciml/electric-power-consumption-data-set?resource=download\n",
     "file_path = 'data/household_power_consumption.zip'\n",
@@ -388,16 +253,21 @@
     "fhat = indices * fhat\n",
     "ffilt = np.fft.ifft(fhat)\n",
     "\n",
-    "fig = sp.make_subplots(rows=3, cols=1)\n",
+    "fig = sp.make_subplots(rows=4, cols=1)\n",
     "fig.update_layout(height=800)\n",
-    "line_chart = go.Scatter(x=temp_df['Date_time'], y=f, mode='lines', name='Actual Voltage')\n",
+    "line_chart1 = go.Scatter(x=temp_df['Date_time'], y=f, mode='lines', name='Actual Voltage')\n",
     "fig.add_trace(line_chart, row=1, col=1)\n",
     "    \n",
-    "line_chart = go.Scatter(x=freq[L], y=np.real(PSD[L]), mode='lines', name='Power Spectrum')\n",
+    "line_chart2 = go.Scatter(x=freq[L], y=np.real(PSD[L]), mode='lines', name='Power Spectrum')\n",
     "fig.add_trace(line_chart, row=2, col=1)\n",
     "\n",
-    "line_chart = go.Scatter(x=temp_df['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
+    "line_chart3 = go.Scatter(x=temp_df['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
     "fig.add_trace(line_chart, row=3, col=1)\n",
+    "\n",
+    "\n",
+    "fig.add_trace(line_chart1, row=4, col=1)\n",
+    "fig.add_trace(line_chart3, row=4, col=1)\n",
+    "\n",
     "\n",
     "#fig.update_layout(title_text=\"Voltage\", showlegend=False)\n",
     "fig.show()"
@@ -408,7 +278,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_df.to_csv('data/sampled_household_power_consumption.csv')"
+   ]
   },
   {
    "cell_type": "code",
