--- a/project_analysis.ipynb
+++ b/project_analysis.ipynb
@@ -98,7 +98,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "window.to_csv('data/line_chart_1.csv')"
+   ]
   }
  ],
  "metadata": {
