edited some stuff

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -213,8 +213,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df = df[(df['Date_time'].dt.year == 2010) & (df['Date_time'].dt.month == 10)].sort_values(by='Date_time')\n",
-    "temp_df\n"
+    "df_cleaned = df.iloc[:, [-1, 0, 1, 2, 3, 4, 5, 6]]\n",
+    "df_cleaned[df_cleaned['Date_time'].dt.year == 2007].to_csv('data/CLEANED_2007_household_power_consumption.zip', compression='zip', index='False')\n",
+    "df_cleaned[df_cleaned['Date_time'].dt.year == 2008].to_csv('data/CLEANED_2008_household_power_consumption.zip', compression='zip', index='False')\n",
+    "df_cleaned[df_cleaned['Date_time'].dt.year == 2009].to_csv('data/CLEANED_2009_household_power_consumption.zip', compression='zip', index='False')\n",
+    "df_cleaned[df_cleaned['Date_time'].dt.year == 2010].to_csv('data/CLEANED_2010_household_power_consumption.zip', compression='zip', index='False')"
    ]
   },
   {
@@ -223,23 +226,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = 1 # sampled every 1 minute\n",
-    "f = temp_df['Voltage'] # - temp_df['Voltage'].mean()\n",
-    "n = len(temp_df)\n",
-    "fhat = np.fft.fft(f, n)\n",
-    "PSD = fhat * np.conj(fhat) / n\n",
-    "freq = (1/(dt*n)) * np.arange(n)\n",
-    "L = np.arange(1, n//2, dtype='int')\n",
+    "# temp_df = df[(df['Date_time'].dt.year == 2010) & (df['Date_time'].dt.month == 10)].sort_values(by='Date_time')\n",
+    "# temp_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dt = 1 # sampled every 1 minute\n",
+    "# f = temp_df['Voltage'] # - temp_df['Voltage'].mean()\n",
+    "# n = len(temp_df)\n",
+    "# fhat = np.fft.fft(f, n)\n",
+    "# PSD = fhat * np.conj(fhat) / n\n",
+    "# freq = (1/(dt*n)) * np.arange(n)\n",
+    "# L = np.arange(1, n//2, dtype='int')\n",
     "\n",
-    "fig = sp.make_subplots(rows=2, cols=1)\n",
-    "line_chart = go.Scatter(x=temp_df['Date_time'], y=f, mode='lines', name='Actual Voltage')\n",
-    "fig.add_trace(line_chart, row=1, col=1)\n",
+    "# fig = sp.make_subplots(rows=2, cols=1)\n",
+    "# line_chart = go.Scatter(x=temp_df['Date_time'], y=f, mode='lines', name='Actual Voltage')\n",
+    "# fig.add_trace(line_chart, row=1, col=1)\n",
     "    \n",
-    "line_chart = go.Scatter(x=freq[L], y=np.real(PSD[L]), mode='lines', name='Power Spectrum')\n",
-    "fig.add_trace(line_chart, row=2, col=1)\n",
+    "# line_chart = go.Scatter(x=freq[L], y=np.real(PSD[L]), mode='lines', name='Power Spectrum')\n",
+    "# fig.add_trace(line_chart, row=2, col=1)\n",
     "\n",
-    "#fig.update_layout(title_text=\"Voltage\", showlegend=False)\n",
-    "#fig.show()"
+    "# #fig.update_layout(title_text=\"Voltage\", showlegend=False)\n",
+    "# #fig.show()"
    ]
   },
   {
@@ -248,29 +261,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices = PSD > 4000\n",
-    "PSD_clean = PSD * indices\n",
-    "fhat = indices * fhat\n",
-    "ffilt = np.fft.ifft(fhat)\n",
+    "# indices = PSD > 4000\n",
+    "# PSD_clean = PSD * indices\n",
+    "# fhat = indices * fhat\n",
+    "# ffilt = np.fft.ifft(fhat)\n",
     "\n",
-    "fig = sp.make_subplots(rows=4, cols=1)\n",
-    "fig.update_layout(height=800)\n",
-    "line_chart1 = go.Scatter(x=temp_df['Date_time'], y=f, mode='lines', name='Actual Voltage')\n",
-    "fig.add_trace(line_chart, row=1, col=1)\n",
+    "# fig = sp.make_subplots(rows=4, cols=1)\n",
+    "# fig.update_layout(height=800)\n",
+    "# line_chart1 = go.Scatter(x=temp_df['Date_time'], y=f, mode='lines', name='Actual Voltage')\n",
+    "# fig.add_trace(line_chart, row=1, col=1)\n",
     "    \n",
-    "line_chart2 = go.Scatter(x=freq[L], y=np.real(PSD[L]), mode='lines', name='Power Spectrum')\n",
-    "fig.add_trace(line_chart, row=2, col=1)\n",
+    "# line_chart2 = go.Scatter(x=freq[L], y=np.real(PSD[L]), mode='lines', name='Power Spectrum')\n",
+    "# fig.add_trace(line_chart, row=2, col=1)\n",
     "\n",
-    "line_chart3 = go.Scatter(x=temp_df['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
-    "fig.add_trace(line_chart, row=3, col=1)\n",
-    "\n",
-    "\n",
-    "fig.add_trace(line_chart1, row=4, col=1)\n",
-    "fig.add_trace(line_chart3, row=4, col=1)\n",
+    "# line_chart3 = go.Scatter(x=temp_df['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
+    "# fig.add_trace(line_chart, row=3, col=1)\n",
     "\n",
     "\n",
-    "#fig.update_layout(title_text=\"Voltage\", showlegend=False)\n",
-    "fig.show()"
+    "# fig.add_trace(line_chart1, row=4, col=1)\n",
+    "# fig.add_trace(line_chart3, row=4, col=1)\n",
+    "\n",
+    "\n",
+    "# #fig.update_layout(title_text=\"Voltage\", showlegend=False)\n",
+    "# fig.show()"
    ]
   },
   {
@@ -279,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df.to_csv('data/sampled_household_power_consumption.csv')"
+    "# temp_df.to_csv('data/sampled_household_power_consumption.csv')"
    ]
   },
   {
