--- a/project_analysis.ipynb
+++ b/project_analysis.ipynb
@@ -22,11 +22,40 @@
    "outputs": [],
    "source": [
     "# dataset imported from kaggle at: https://www.kaggle.com/datasets/uciml/electric-power-consumption-data-set?resource=download\n",
-    "file_path = 'data/sampled_household_power_consumption.csv'\n",
+    "file_path = 'data/CLEANED_2010_household_power_consumption.zip'\n",
     "\n",
-    "df = pd.read_csv(file_path).iloc[:, [-1,1,2,3,4,5,6,7]]\n",
+    "df = pd.read_csv(file_path).iloc[:, 1:]\n",
+    "df['Date_time'] = pd.to_datetime(df['Date_time'])\n",
     "print(df.shape)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = sp.make_subplots(rows=12, cols=1)\n",
+    "fig.update_layout(height=1000, width=1000)\n",
+    "\n",
+    "for i, month in enumerate(range(1,13)):\n",
+    "    temp_df = df[(df['Date_time'].dt.month == month)].sort_values(by='Date_time')\n",
+    "    line_chart = go.Scatter(x=temp_df['Date_time'], y=temp_df['Voltage'], mode='lines', name=month)\n",
+    "    fig.add_trace(line_chart, row=i+1, col=1)\n",
+    "    \n",
+    "\n",
+    "fig.update_layout(title_text=\"Voltage\", showlegend=False)\n",
+    "fig.show()"
    ]
   },
   {
@@ -35,6 +64,13 @@
    "source": [
     "## Applications"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -49,8 +85,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window = df[(df['Date_time'] >= '2010-10-15') &\n",
-    "            (df['Date_time'] <= '2010-10-22')]\n",
+    "#temp_df = df[(df['Date_time'].dt.year == 2009) & (df['Date_time'].dt.month == 9)].sort_values(by='Date_time')\n",
+    "window1 = ('2010-02-05', '2010-02-12')\n",
+    "window2 = ('2010-02-13', '2010-02-20')\n",
+    "\n",
+    "window = df[(df['Date_time'] >= window1[0]) &\n",
+    "            (df['Date_time'] <= window1[1])].sort_values(by='Date_time')\n",
     "\n",
     "x = window['Date_time']\n",
     "y = window['Voltage']\n",
@@ -80,8 +120,8 @@
     "fig.add_trace(line_chart1, row=4, col=1)\n",
     "fig.add_trace(line_chart3, row=4, col=1)\n",
     "\n",
-    "window2 = df[(df['Date_time'] >= '2010-10-21') &\n",
-    "            (df['Date_time'] <= '2010-10-28')]\n",
+    "window2 = df[(df['Date_time'] >= window2[0]) &\n",
+    "            (df['Date_time'] <= window2[1])]\n",
     "line_chart4 = go.Scatter(x=window2['Date_time'], y=window2['Voltage'], mode='lines', name='Denoisified Voltage')\n",
     "fig.add_trace(line_chart4, row=5, col=1)\n",
     "line_chart5 = go.Scatter(x=window2['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
