added more features

--- a/project_analysis.ipynb
+++ b/project_analysis.ipynb
@@ -70,6 +70,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Generate time values from 0 to 2*pi with small intervals\n",
+    "t = np.arange(0, 8 * np.pi, 0.1)\n",
+    "\n",
+    "# Calculate sine values for each time value\n",
+    "y = 2*np.cos(t) + np.sin(3*t)\n",
+    "\n",
+    "n = len(t)\n",
+    "fhat = np.fft.fft(y, n)\n",
+    "PSD = fhat * np.conj(fhat) / n\n",
+    "freq = (1/(n)) * np.arange(n)\n",
+    "L = np.arange(1, n//2, dtype='int')\n",
+    "\n",
+    "indices = PSD > 500\n",
+    "PSD_clean = PSD * indices\n",
+    "fhat = indices * fhat\n",
+    "ffilt = np.fft.ifft(fhat)\n",
+    "\n",
+    "# Plot the sine wave\n",
+    "fig = sp.make_subplots(rows=5, cols=1)\n",
+    "fig.update_layout(height=800)\n",
+    "line_chart1 = go.Scatter(x=t, y=y, mode='lines', name='Actual Voltage')\n",
+    "fig.add_trace(line_chart1, row=1, col=1)\n",
+    "    \n",
+    "line_chart2 = go.Scatter(x=freq[L], y=np.real(PSD[L]), mode='lines', name='Power Spectrum')\n",
+    "#fig.update_xaxes(tickvals=freq[L], row=2, col=1)\n",
+    "fig.add_trace(line_chart2, row=2, col=1)\n",
+    "\n",
+    "# line_chart3 = go.Scatter(x=x, y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
+    "# fig.add_trace(line_chart3, row=3, col=1)\n",
+    "# fig.add_trace(line_chart1, row=4, col=1)\n",
+    "\n",
+    "# window2 = df[(df['Date_time'] >= window2[0]) &\n",
+    "#             (df['Date_time'] <= window2[1])]\n",
+    "# line_chart4 = go.Scatter(x=window2['Date_time'], y=window2['Voltage'], mode='lines', name='Denoisified Voltage')\n",
+    "# fig.add_trace(line_chart4, row=5, col=1)\n",
+    "# line_chart5 = go.Scatter(x=window2['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
+    "# fig.add_trace(line_chart5, row=5, col=1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#fig.update_layout(title_text=\"Voltage\", showlegend=False)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
