got working fft visualizer

--- a/project_analysis.ipynb
+++ b/project_analysis.ipynb
@@ -75,7 +75,7 @@
     "t = np.arange(0, 8 * np.pi, 0.1)\n",
     "\n",
     "# Calculate sine values for each time value\n",
-    "y = 2*np.cos(t) + np.sin(3*t)\n",
+    "y = 2*np.cos(t) + np.sin(3*t) + 3 * np.sin(2*t)\n",
     "\n",
     "n = len(t)\n",
     "fhat = np.fft.fft(y, n)\n",
