added a bunch of features

--- a/project_analysis.ipynb
+++ b/project_analysis.ipynb
@@ -189,7 +189,191 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window.to_csv('data/line_chart_1.csv')"
+    "temp_window = window.sample(1024, random_state=42).sort_values(by='Date_time')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = 1\n",
+    "n_samples = 8192\n",
+    "temp_window = window.sample(n_samples, random_state=state).sort_values(by='Date_time')\n",
+    "\n",
+    "window1 = ('2010-02-05', '2010-02-12')\n",
+    "window2 = ('2010-02-13', '2010-02-20')\n",
+    "\n",
+    "x = temp_window['Date_time']\n",
+    "y = temp_window['Voltage']\n",
+    "n = len(x)\n",
+    "fhat = np.fft.fft(y)\n",
+    "PSD = fhat * np.conj(fhat) / n_samples\n",
+    "np.real(PSD[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.real(PSD[:len(freq)//2])[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "freq = (1/(n)) * np.arange(n)\n",
+    "\n",
+    "indices = PSD > 800"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fhat = indices * fhat\n",
+    "fhat[:10]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ffilt = np.fft.ifft(fhat)\n",
+    "np.real(np.real(ffilt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig = sp.make_subplots(rows=5, cols=1)\n",
+    "fig.update_layout(height=800)\n",
+    "line_chart1 = go.Scatter(x=x, y=y, mode='lines', name='Actual Voltage')\n",
+    "fig.add_trace(line_chart1, row=1, col=1)\n",
+    "    \n",
+    "line_chart2 = go.Scatter(x=freq[:len(freq)//2], y=np.real(PSD[:len(freq)//2]), mode='lines', name='Power Spectrum')\n",
+    "fig.add_trace(line_chart2, row=2, col=1)\n",
+    "\n",
+    "line_chart3 = go.Scatter(x=x, y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
+    "fig.add_trace(line_chart3, row=3, col=1)\n",
+    "\n",
+    "fig.add_trace(line_chart1, row=4, col=1)\n",
+    "fig.add_trace(line_chart3, row=4, col=1)\n",
+    "\n",
+    "window2 = df[(df['Date_time'] >= window2[0]) &\n",
+    "            (df['Date_time'] <= window2[1])]\n",
+    "\n",
+    "temp_window2 = window2.sample(n_samples, random_state=state).sort_values(by='Date_time')\n",
+    "line_chart4 = go.Scatter(x=temp_window2['Date_time'], y=temp_window2['Voltage'], mode='lines', name='Denoisified Voltage')\n",
+    "fig.add_trace(line_chart4, row=5, col=1)\n",
+    "line_chart5 = go.Scatter(x=temp_window2['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
+    "fig.add_trace(line_chart5, row=5, col=1)\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = 1\n",
+    "n_samples = 8192\n",
+    "temp_window = window.sample(n_samples, random_state=state).sort_values(by='Date_time')\n",
+    "\n",
+    "window1 = ('2010-02-05', '2010-02-12')\n",
+    "window2 = ('2010-02-13', '2010-02-20')\n",
+    "\n",
+    "x = temp_window['Date_time']\n",
+    "y = temp_window['Voltage']\n",
+    "n = len(x)\n",
+    "fftresult = np.fft.fft(y)\n",
+    "magnitudes = np.abs(fftresult)\n",
+    "\n",
+    "freq = (1/(n)) * np.arange(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "magnitudes = np.abs(fftresult)\n",
+    "magnitudes[0]/n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.real(fftresult[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices = PSD > 100\n",
+    "# PSD_clean = PSD * indices\n",
+    "fhat = indices * fhat\n",
+    "ffilt = np.fft.ifft(fhat)\n",
+    "\n",
+    "fig = sp.make_subplots(rows=5, cols=1)\n",
+    "fig.update_layout(height=800)\n",
+    "line_chart1 = go.Scatter(x=x, y=y, mode='lines', name='Actual Voltage')\n",
+    "fig.add_trace(line_chart1, row=1, col=1)\n",
+    "    \n",
+    "line_chart2 = go.Scatter(x=freq[:len(freq)//2], y=magnitudes[:len(freq)//2], mode='lines', name='Power Spectrum')\n",
+    "fig.add_trace(line_chart2, row=2, col=1)\n",
+    "\n",
+    "line_chart3 = go.Scatter(x=x, y=np.real(fhat), mode='lines', name='Denoisified Voltage')\n",
+    "fig.add_trace(line_chart3, row=3, col=1)\n",
+    "\n",
+    "# fig.add_trace(line_chart1, row=4, col=1)\n",
+    "# fig.add_trace(line_chart3, row=4, col=1)\n",
+    "\n",
+    "# window2 = df[(df['Date_time'] >= window2[0]) &\n",
+    "#             (df['Date_time'] <= window2[1])]\n",
+    "\n",
+    "# temp_window2 = window2.sample(n_samples, random_state=state).sort_values(by='Date_time')\n",
+    "# line_chart4 = go.Scatter(x=temp_window2['Date_time'], y=temp_window2['Voltage'], mode='lines', name='Denoisified Voltage')\n",
+    "# fig.add_trace(line_chart4, row=5, col=1)\n",
+    "# line_chart5 = go.Scatter(x=temp_window2['Date_time'], y=np.real(ffilt), mode='lines', name='Denoisified Voltage')\n",
+    "# fig.add_trace(line_chart5, row=5, col=1)\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_window[['Date_time', 'Voltage']].to_json('data/electric_data_window.json', orient='records')\n",
+    "temp_window2[['Date_time', 'Voltage']].to_json('data/electric_data_next_window.json', orient='records')"
    ]
   }
  ],
